--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href="./" >课程介绍</a>
+        <a href="./" >Linux</a>
     </h1>
 </div>
 
